tests/fixtures/require_badutf8.out
info: Typechecking...
error: Invalid UTF-8 in require path

        @ __ROOT__/tests/fixtures/require_badutf8.rb:2
      2 |  require "\x80"
                   ^^^^^^ here
